--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,11 @@
-.App {
-  text-align: center;
+.grocery{
+  -webkit-box-shadow: 0px 0px 14px -3px rgba(103,104,105,1);
+-moz-box-shadow: 0px 0px 14px -3px rgba(103,104,105,1);
+box-shadow: 0px 0px 14px -3px rgba(103,104,105,1);
+  transition: 0.2s;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grocery:hover{
+    -webkit-box-shadow: 0px 0px 26px -3px rgba(103,104,105,1);
+-moz-box-shadow: 0px 0px 26px -3px rgba(103,104,105,1);
+box-shadow: 0px 0px 26px -3px rgba(103,104,105,1);
 }
